Reworked OMT/COH warning to always warn with -OMT and +COH.  Fixed build --enable-cds-archive-coh to nocoh.